GNOME Bugzilla – Bug 618613
Fix crash with --sync option
Last modified: 2010-05-25 18:15:28 UTC
Created attachment 161044 [details] [review] Patch to avoid crash meta_set_syncing() can only be called after meta_display_open() has been called, as it requires the MetaDisplay object.
Created attachment 161962 [details] [review] Fix crash with --sync option The current code is clearly meant to be lazy - it saves the value to a variable and synchronizes the immediately after opening the display if the variable is set. So it's better to fix that than to move the meta_set_syncing() call, since moving the call means that the initial display set up won't be synchronized.
Metacity bug is bug 557514
Thomas committed the patch to Metacity, so counting that as review. Attachment 161962 [details] pushed as f45083c - Fix crash with --sync option